buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
        classpath "io.spring.gradle:dependency-management-plugin:$springDependencyManagementPluginVersion"
    }

    apply plugin: WaitForMySqlPlugin
}

plugins {
    id "com.github.ben-manes.versions" version "0.51.0"
}


subprojects {

    apply plugin: "java-library"
    apply plugin: "io.spring.dependency-management"
    sourceCompatibility = '21'
    targetCompatibility = '21'

    group = "net.chrisrichardson.ftgo"

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
        }
    }

    dependencies {
        testImplementation 'junit:junit:4.13.2'
        testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
    }

    tasks.withType(Test) {
        useJUnitPlatform()
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs << '-parameters'
    }

    repositories {
        mavenCentral()

        maven {
            url "${project.rootDir}/build/repo"
        }

    }

}
